[workspace]
resolver = "2"
members = [
    "crates/keyquorum-core",
    "crates/keyquorum",
    "crates/keyquorum-split",
]
# The fuzz crate builds with nightly + cargo-fuzz only; keep it out of the
# workspace so cargo test / clippy / deny don't try to build it.
exclude = ["fuzz"]

[profile.release]
opt-level = 2
strip = true
lto = true
