[package]
name = "keyquorum-core"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SiteRelEnby/keyquorum"
description = "Shared library for keyquorum - types, protocol, memory security, config"
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
libc = "0.2"
sharks = "0.5"
base64 = "0.22"
thiserror = "2"
blake3 = "1"
crc32fast = "1"
data-encoding = "2"
