[package]
name = "keyquorum-split"
version = "0.1.0"
edition = "2021"
description = "Split a secret into Shamir shares for use with keyquorum"

[dependencies]
keyquorum-core = { path = "../keyquorum-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64 = "0.22"
sharks = "0.5"
