[package]
name = "keyquorum-split"
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SiteRelEnby/keyquorum"
description = "Split a secret into Shamir shares for use with keyquorum"
readme = "../../README.md"

[dependencies]
keyquorum-core = { version = "0.1.0-alpha.1", path = "../keyquorum-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }
blahaj = "0.6"
blake3 = "1"
