[package]
name = "keyquorum"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Shamir secret sharing daemon for distributed key quorum"

[dependencies]
keyquorum-core = { path = "../keyquorum-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
sharks = "0.5"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
