[package]
name = "keyquorum"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SiteRelEnby/keyquorum"
description = "Shamir secret sharing daemon for distributed key quorum"
readme = "../../README.md"

[dependencies]
keyquorum-core = { version = "0.1.1", path = "../keyquorum-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"
blahaj = "0.6"
base64 = "0.22"
zeroize = { version = "1", features = ["zeroize_derive"] }
blake3 = "1"
